# reBotArm_control_py

./: README.md  README_Fr.md  README_JP.md  README_es.md  README_zh.md  pyproject.toml  requirements.txt
config/: rebotarm.yaml  rebotarm_dm.yaml  rebotarm_rs.yaml
docs/: gravity_calibration_rs_2026-07-17.md
example/: 10_gravity_compensation_lock.py  2_zero_and_read.py  3_mit_control.py  4_pos_vel_control.py  5_fk_test.py  6_ik_test.py  7_arm_ik_control.py  8_arm_traj_control.py  9_gravity_compensation.py
example/sim/: visualizer.py
reBotArm_control_py/actuator/: rebotarm.py
reBotArm_control_py/controllers/: rebotarm_endpose_controller.py
reBotArm_control_py/kinematics/: robot_model.py
tools/gravity_calibration/: README.md  auto_float_test.py  fit_sweeps.py  pd_sweep_id.py  phase_a_sign_probe.py
tools/gravity_calibration/data/: autofloat_joint3_vendor_1784313276.json  final_clean_fits.json  pdsweep_joint2_Lpose_1784316253.json  pdsweep_joint3_1784312640.json  pdsweep_joint4_clear_1784315996.json  pdsweep_joint5_clear_1784316109.json
urdf/00-arm-rs_asm-v3/urdf/: 00-arm-rs_asm-v3.urdf
urdf/reBot-DevArm_fixend_description/urdf/: reBot-DevArm_fixend.urdf
