[project]
name = "rebotarm-control-py"
version = "0.1.0"
description = "Control library for reBotArm robotic arms"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "meshcat>=0.3.2",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
    "motorbridge>=0.3.9",
    "pinocchio>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["reBotArm_control_py*"]
